[package]
name = "elmethis-json-component-types"
version = "0.3.2"
edition = "2024"
description = "Component JSON Schema"
authors = ["Chomolungma Shirayuki"]
repository = "https://github.com/46ki75/elmethis-notion"
license = "MIT"
documentation = "https://docs.rs/elmethis-json-component-types"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.140"
