[package]
name = "jarkup-rs"
version = "0.2.2"
edition = "2024"
description = "A JSON-based intermediate markup language for component representation."
authors = ["Chomolungma Shirayuki"]
repository = "https://github.com/46ki75/jarkup"
license = "MIT"
documentation = "https://docs.rs/jarkup"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.140"
